updates with new v4 version and cleanup

--- a/Shane/AirNowAPI_v2.ipynb
+++ b/Shane/AirNowAPI_v2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,26 +83,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "420"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Set Date Range to use for API\n",
-    "# startDate = '2015-01-01'\n",
-    "startDate = '2020-01-01'\n",
-    "# endDate = '2019-12-31'\n",
-    "endDate = '2020-01-31'\n",
+    "startDate = '2015-01-01'\n",
+    "# startDate = '2020-01-01'\n",
+    "endDate = '2019-12-31'\n",
+    "# endDate = '2020-01-31'\n",
     "\n",
     "# Create a list of dates (from Start to End)\n",
     "dateList = pd.date_range(startDate, endDate).strftime(\"%Y-%m-%d\").tolist()\n",
@@ -114,8 +114,8 @@
     "# Loop through dateList and append only dates that are within the range of days (of month) to the datesToUseList\n",
     "for date in dateList:\n",
     "    day = (datetime.datetime.strptime(date, \"%Y-%m-%d\")).day\n",
-    "#     if day in range(1,8):\n",
-    "    if day in range(1,2):\n",
+    "    if day in range(1,8):\n",
+    "#     if day in range(1,2):\n",
     "        datesToUseList.append(date)\n",
     "#         print(f\"KEEP: {date} is in range\")\n",
     "    else:\n",
@@ -128,10 +128,442 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['2015-01-01',\n",
+       " '2015-01-02',\n",
+       " '2015-01-03',\n",
+       " '2015-01-04',\n",
+       " '2015-01-05',\n",
+       " '2015-01-06',\n",
+       " '2015-01-07',\n",
+       " '2015-02-01',\n",
+       " '2015-02-02',\n",
+       " '2015-02-03',\n",
+       " '2015-02-04',\n",
+       " '2015-02-05',\n",
+       " '2015-02-06',\n",
+       " '2015-02-07',\n",
+       " '2015-03-01',\n",
+       " '2015-03-02',\n",
+       " '2015-03-03',\n",
+       " '2015-03-04',\n",
+       " '2015-03-05',\n",
+       " '2015-03-06',\n",
+       " '2015-03-07',\n",
+       " '2015-04-01',\n",
+       " '2015-04-02',\n",
+       " '2015-04-03',\n",
+       " '2015-04-04',\n",
+       " '2015-04-05',\n",
+       " '2015-04-06',\n",
+       " '2015-04-07',\n",
+       " '2015-05-01',\n",
+       " '2015-05-02',\n",
+       " '2015-05-03',\n",
+       " '2015-05-04',\n",
+       " '2015-05-05',\n",
+       " '2015-05-06',\n",
+       " '2015-05-07',\n",
+       " '2015-06-01',\n",
+       " '2015-06-02',\n",
+       " '2015-06-03',\n",
+       " '2015-06-04',\n",
+       " '2015-06-05',\n",
+       " '2015-06-06',\n",
+       " '2015-06-07',\n",
+       " '2015-07-01',\n",
+       " '2015-07-02',\n",
+       " '2015-07-03',\n",
+       " '2015-07-04',\n",
+       " '2015-07-05',\n",
+       " '2015-07-06',\n",
+       " '2015-07-07',\n",
+       " '2015-08-01',\n",
+       " '2015-08-02',\n",
+       " '2015-08-03',\n",
+       " '2015-08-04',\n",
+       " '2015-08-05',\n",
+       " '2015-08-06',\n",
+       " '2015-08-07',\n",
+       " '2015-09-01',\n",
+       " '2015-09-02',\n",
+       " '2015-09-03',\n",
+       " '2015-09-04',\n",
+       " '2015-09-05',\n",
+       " '2015-09-06',\n",
+       " '2015-09-07',\n",
+       " '2015-10-01',\n",
+       " '2015-10-02',\n",
+       " '2015-10-03',\n",
+       " '2015-10-04',\n",
+       " '2015-10-05',\n",
+       " '2015-10-06',\n",
+       " '2015-10-07',\n",
+       " '2015-11-01',\n",
+       " '2015-11-02',\n",
+       " '2015-11-03',\n",
+       " '2015-11-04',\n",
+       " '2015-11-05',\n",
+       " '2015-11-06',\n",
+       " '2015-11-07',\n",
+       " '2015-12-01',\n",
+       " '2015-12-02',\n",
+       " '2015-12-03',\n",
+       " '2015-12-04',\n",
+       " '2015-12-05',\n",
+       " '2015-12-06',\n",
+       " '2015-12-07',\n",
+       " '2016-01-01',\n",
+       " '2016-01-02',\n",
+       " '2016-01-03',\n",
+       " '2016-01-04',\n",
+       " '2016-01-05',\n",
+       " '2016-01-06',\n",
+       " '2016-01-07',\n",
+       " '2016-02-01',\n",
+       " '2016-02-02',\n",
+       " '2016-02-03',\n",
+       " '2016-02-04',\n",
+       " '2016-02-05',\n",
+       " '2016-02-06',\n",
+       " '2016-02-07',\n",
+       " '2016-03-01',\n",
+       " '2016-03-02',\n",
+       " '2016-03-03',\n",
+       " '2016-03-04',\n",
+       " '2016-03-05',\n",
+       " '2016-03-06',\n",
+       " '2016-03-07',\n",
+       " '2016-04-01',\n",
+       " '2016-04-02',\n",
+       " '2016-04-03',\n",
+       " '2016-04-04',\n",
+       " '2016-04-05',\n",
+       " '2016-04-06',\n",
+       " '2016-04-07',\n",
+       " '2016-05-01',\n",
+       " '2016-05-02',\n",
+       " '2016-05-03',\n",
+       " '2016-05-04',\n",
+       " '2016-05-05',\n",
+       " '2016-05-06',\n",
+       " '2016-05-07',\n",
+       " '2016-06-01',\n",
+       " '2016-06-02',\n",
+       " '2016-06-03',\n",
+       " '2016-06-04',\n",
+       " '2016-06-05',\n",
+       " '2016-06-06',\n",
+       " '2016-06-07',\n",
+       " '2016-07-01',\n",
+       " '2016-07-02',\n",
+       " '2016-07-03',\n",
+       " '2016-07-04',\n",
+       " '2016-07-05',\n",
+       " '2016-07-06',\n",
+       " '2016-07-07',\n",
+       " '2016-08-01',\n",
+       " '2016-08-02',\n",
+       " '2016-08-03',\n",
+       " '2016-08-04',\n",
+       " '2016-08-05',\n",
+       " '2016-08-06',\n",
+       " '2016-08-07',\n",
+       " '2016-09-01',\n",
+       " '2016-09-02',\n",
+       " '2016-09-03',\n",
+       " '2016-09-04',\n",
+       " '2016-09-05',\n",
+       " '2016-09-06',\n",
+       " '2016-09-07',\n",
+       " '2016-10-01',\n",
+       " '2016-10-02',\n",
+       " '2016-10-03',\n",
+       " '2016-10-04',\n",
+       " '2016-10-05',\n",
+       " '2016-10-06',\n",
+       " '2016-10-07',\n",
+       " '2016-11-01',\n",
+       " '2016-11-02',\n",
+       " '2016-11-03',\n",
+       " '2016-11-04',\n",
+       " '2016-11-05',\n",
+       " '2016-11-06',\n",
+       " '2016-11-07',\n",
+       " '2016-12-01',\n",
+       " '2016-12-02',\n",
+       " '2016-12-03',\n",
+       " '2016-12-04',\n",
+       " '2016-12-05',\n",
+       " '2016-12-06',\n",
+       " '2016-12-07',\n",
+       " '2017-01-01',\n",
+       " '2017-01-02',\n",
+       " '2017-01-03',\n",
+       " '2017-01-04',\n",
+       " '2017-01-05',\n",
+       " '2017-01-06',\n",
+       " '2017-01-07',\n",
+       " '2017-02-01',\n",
+       " '2017-02-02',\n",
+       " '2017-02-03',\n",
+       " '2017-02-04',\n",
+       " '2017-02-05',\n",
+       " '2017-02-06',\n",
+       " '2017-02-07',\n",
+       " '2017-03-01',\n",
+       " '2017-03-02',\n",
+       " '2017-03-03',\n",
+       " '2017-03-04',\n",
+       " '2017-03-05',\n",
+       " '2017-03-06',\n",
+       " '2017-03-07',\n",
+       " '2017-04-01',\n",
+       " '2017-04-02',\n",
+       " '2017-04-03',\n",
+       " '2017-04-04',\n",
+       " '2017-04-05',\n",
+       " '2017-04-06',\n",
+       " '2017-04-07',\n",
+       " '2017-05-01',\n",
+       " '2017-05-02',\n",
+       " '2017-05-03',\n",
+       " '2017-05-04',\n",
+       " '2017-05-05',\n",
+       " '2017-05-06',\n",
+       " '2017-05-07',\n",
+       " '2017-06-01',\n",
+       " '2017-06-02',\n",
+       " '2017-06-03',\n",
+       " '2017-06-04',\n",
+       " '2017-06-05',\n",
+       " '2017-06-06',\n",
+       " '2017-06-07',\n",
+       " '2017-07-01',\n",
+       " '2017-07-02',\n",
+       " '2017-07-03',\n",
+       " '2017-07-04',\n",
+       " '2017-07-05',\n",
+       " '2017-07-06',\n",
+       " '2017-07-07',\n",
+       " '2017-08-01',\n",
+       " '2017-08-02',\n",
+       " '2017-08-03',\n",
+       " '2017-08-04',\n",
+       " '2017-08-05',\n",
+       " '2017-08-06',\n",
+       " '2017-08-07',\n",
+       " '2017-09-01',\n",
+       " '2017-09-02',\n",
+       " '2017-09-03',\n",
+       " '2017-09-04',\n",
+       " '2017-09-05',\n",
+       " '2017-09-06',\n",
+       " '2017-09-07',\n",
+       " '2017-10-01',\n",
+       " '2017-10-02',\n",
+       " '2017-10-03',\n",
+       " '2017-10-04',\n",
+       " '2017-10-05',\n",
+       " '2017-10-06',\n",
+       " '2017-10-07',\n",
+       " '2017-11-01',\n",
+       " '2017-11-02',\n",
+       " '2017-11-03',\n",
+       " '2017-11-04',\n",
+       " '2017-11-05',\n",
+       " '2017-11-06',\n",
+       " '2017-11-07',\n",
+       " '2017-12-01',\n",
+       " '2017-12-02',\n",
+       " '2017-12-03',\n",
+       " '2017-12-04',\n",
+       " '2017-12-05',\n",
+       " '2017-12-06',\n",
+       " '2017-12-07',\n",
+       " '2018-01-01',\n",
+       " '2018-01-02',\n",
+       " '2018-01-03',\n",
+       " '2018-01-04',\n",
+       " '2018-01-05',\n",
+       " '2018-01-06',\n",
+       " '2018-01-07',\n",
+       " '2018-02-01',\n",
+       " '2018-02-02',\n",
+       " '2018-02-03',\n",
+       " '2018-02-04',\n",
+       " '2018-02-05',\n",
+       " '2018-02-06',\n",
+       " '2018-02-07',\n",
+       " '2018-03-01',\n",
+       " '2018-03-02',\n",
+       " '2018-03-03',\n",
+       " '2018-03-04',\n",
+       " '2018-03-05',\n",
+       " '2018-03-06',\n",
+       " '2018-03-07',\n",
+       " '2018-04-01',\n",
+       " '2018-04-02',\n",
+       " '2018-04-03',\n",
+       " '2018-04-04',\n",
+       " '2018-04-05',\n",
+       " '2018-04-06',\n",
+       " '2018-04-07',\n",
+       " '2018-05-01',\n",
+       " '2018-05-02',\n",
+       " '2018-05-03',\n",
+       " '2018-05-04',\n",
+       " '2018-05-05',\n",
+       " '2018-05-06',\n",
+       " '2018-05-07',\n",
+       " '2018-06-01',\n",
+       " '2018-06-02',\n",
+       " '2018-06-03',\n",
+       " '2018-06-04',\n",
+       " '2018-06-05',\n",
+       " '2018-06-06',\n",
+       " '2018-06-07',\n",
+       " '2018-07-01',\n",
+       " '2018-07-02',\n",
+       " '2018-07-03',\n",
+       " '2018-07-04',\n",
+       " '2018-07-05',\n",
+       " '2018-07-06',\n",
+       " '2018-07-07',\n",
+       " '2018-08-01',\n",
+       " '2018-08-02',\n",
+       " '2018-08-03',\n",
+       " '2018-08-04',\n",
+       " '2018-08-05',\n",
+       " '2018-08-06',\n",
+       " '2018-08-07',\n",
+       " '2018-09-01',\n",
+       " '2018-09-02',\n",
+       " '2018-09-03',\n",
+       " '2018-09-04',\n",
+       " '2018-09-05',\n",
+       " '2018-09-06',\n",
+       " '2018-09-07',\n",
+       " '2018-10-01',\n",
+       " '2018-10-02',\n",
+       " '2018-10-03',\n",
+       " '2018-10-04',\n",
+       " '2018-10-05',\n",
+       " '2018-10-06',\n",
+       " '2018-10-07',\n",
+       " '2018-11-01',\n",
+       " '2018-11-02',\n",
+       " '2018-11-03',\n",
+       " '2018-11-04',\n",
+       " '2018-11-05',\n",
+       " '2018-11-06',\n",
+       " '2018-11-07',\n",
+       " '2018-12-01',\n",
+       " '2018-12-02',\n",
+       " '2018-12-03',\n",
+       " '2018-12-04',\n",
+       " '2018-12-05',\n",
+       " '2018-12-06',\n",
+       " '2018-12-07',\n",
+       " '2019-01-01',\n",
+       " '2019-01-02',\n",
+       " '2019-01-03',\n",
+       " '2019-01-04',\n",
+       " '2019-01-05',\n",
+       " '2019-01-06',\n",
+       " '2019-01-07',\n",
+       " '2019-02-01',\n",
+       " '2019-02-02',\n",
+       " '2019-02-03',\n",
+       " '2019-02-04',\n",
+       " '2019-02-05',\n",
+       " '2019-02-06',\n",
+       " '2019-02-07',\n",
+       " '2019-03-01',\n",
+       " '2019-03-02',\n",
+       " '2019-03-03',\n",
+       " '2019-03-04',\n",
+       " '2019-03-05',\n",
+       " '2019-03-06',\n",
+       " '2019-03-07',\n",
+       " '2019-04-01',\n",
+       " '2019-04-02',\n",
+       " '2019-04-03',\n",
+       " '2019-04-04',\n",
+       " '2019-04-05',\n",
+       " '2019-04-06',\n",
+       " '2019-04-07',\n",
+       " '2019-05-01',\n",
+       " '2019-05-02',\n",
+       " '2019-05-03',\n",
+       " '2019-05-04',\n",
+       " '2019-05-05',\n",
+       " '2019-05-06',\n",
+       " '2019-05-07',\n",
+       " '2019-06-01',\n",
+       " '2019-06-02',\n",
+       " '2019-06-03',\n",
+       " '2019-06-04',\n",
+       " '2019-06-05',\n",
+       " '2019-06-06',\n",
+       " '2019-06-07',\n",
+       " '2019-07-01',\n",
+       " '2019-07-02',\n",
+       " '2019-07-03',\n",
+       " '2019-07-04',\n",
+       " '2019-07-05',\n",
+       " '2019-07-06',\n",
+       " '2019-07-07',\n",
+       " '2019-08-01',\n",
+       " '2019-08-02',\n",
+       " '2019-08-03',\n",
+       " '2019-08-04',\n",
+       " '2019-08-05',\n",
+       " '2019-08-06',\n",
+       " '2019-08-07',\n",
+       " '2019-09-01',\n",
+       " '2019-09-02',\n",
+       " '2019-09-03',\n",
+       " '2019-09-04',\n",
+       " '2019-09-05',\n",
+       " '2019-09-06',\n",
+       " '2019-09-07',\n",
+       " '2019-10-01',\n",
+       " '2019-10-02',\n",
+       " '2019-10-03',\n",
+       " '2019-10-04',\n",
+       " '2019-10-05',\n",
+       " '2019-10-06',\n",
+       " '2019-10-07',\n",
+       " '2019-11-01',\n",
+       " '2019-11-02',\n",
+       " '2019-11-03',\n",
+       " '2019-11-04',\n",
+       " '2019-11-05',\n",
+       " '2019-11-06',\n",
+       " '2019-11-07',\n",
+       " '2019-12-01',\n",
+       " '2019-12-02',\n",
+       " '2019-12-03',\n",
+       " '2019-12-04',\n",
+       " '2019-12-05',\n",
+       " '2019-12-06',\n",
+       " '2019-12-07']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datesToUseList"
+   ]
   },
   {
    "cell_type": "markdown",
