--- a/Shane/AirNowAPI_v4.ipynb
+++ b/Shane/AirNowAPI_v4.ipynb
@@ -24051,22 +24051,20 @@
     "        # Update overall attempt counter\n",
     "        counterAttempts += 1\n",
     "        \n",
-    "        # Once 500 attempts have been made for all five API Keys, reset counterAttemptsPerAPI, counterAPI and apiKey then sleep for one hour (3600 seconds)\n",
-    "        if counterAttemptsPerAPI > 500 and counterAPI >= 5:\n",
-    "#         if counterAttemptsPerAPI > 2 and counterAPI >= 5:\n",
+    "        # Once 250 attempts have been made for all five API Keys, reset counterAttemptsPerAPI, counterAPI and apiKey then sleep for one hour (3600 seconds)\n",
+    "        if counterAttemptsPerAPI >= 250 and counterAPI >= 5:\n",
     "            counterAttemptsPerAPI = 1\n",
     "            counterAPI = 1\n",
     "            apiKey = airNowApiKey1\n",
     "            sleep(3600)\n",
     "#             sleep(3)\n",
-    "            print(\"*****  500 per API for all APIs avialable reached | RESET counterAttemptsPerAPI, counterAPI, apiKey & SLEEP  *****\")\n",
+    "            print(\"*****  250 per API for all APIs avialable reached | RESET counterAttemptsPerAPI, counterAPI, apiKey & SLEEP  *****\")\n",
     "\n",
-    "        # Once 500 attempts have been made for the currently used API Key, update counterAPI so a new apiKey is used next time through, reset counterAttemptsPerAPI\n",
-    "        elif counterAttemptsPerAPI > 500:\n",
-    "#         elif counterAttemptsPerAPI > 2:\n",
+    "        # Once 250 attempts have been made for the currently used API Key, update counterAPI so a new apiKey is used next time through, reset counterAttemptsPerAPI\n",
+    "        elif counterAttemptsPerAPI >= 250:\n",
     "            counterAPI += 1\n",
     "            counterAttemptsPerAPI = 1\n",
-    "            print(\"*****  500 per current API reached | RESET counterAttemptsPerAPI; UPDATE counterAPI & apiKey  *****\")\n",
+    "            print(\"*****  250 per current API reached | RESET counterAttemptsPerAPI; UPDATE counterAPI & apiKey  *****\")\n",
     "            \n",
     "        else:\n",
     "            counterAttemptsPerAPI += 1\n",
@@ -24087,12 +24085,6 @@
     "        elif counterAPI == 5:\n",
     "            apiKey = airNowApiKey5\n",
     "            apiKeyUsed = \"airNowApiKey5\"\n",
-    "#         elif counterAPI > 5:\n",
-    "#             apiKey = airNowApiKey1\n",
-    "#             apiKeyUsed = \"airNowApiKey1\"\n",
-    "#         else:\n",
-    "#             apiKey = airNowApiKey1\n",
-    "#             apiKeyUsed = \"airNowApiKey1\"\n",
     "        \n",
     "        # Call the apiCallLatLongHistorical function, passing through updated variables as parameters\n",
     "        apiCallLatLongHistorical(cityRank, cityName, cityCSA, cityState, cityPopulation2018Estimate, cityPopulation2010Census, cityLat, cityLong, cityZip, date, \"00-0000\", apiKey, apiKeyUsed, counterAttempts, counterAttemptsPerAPI, counterAPI)\n",
