updated and implemented line chart code

--- a/dbSetUp.ipynb
+++ b/dbSetUp.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -86,15 +86,15 @@
        "      <th>AQI</th>\n",
        "      <th>AQICategoryNumber</th>\n",
        "      <th>AQICategory</th>\n",
-       "      <th>cityRank</th>\n",
-       "      <th>cityName</th>\n",
-       "      <th>cityCSA</th>\n",
-       "      <th>cityState</th>\n",
-       "      <th>cityPopulation2018Estimate</th>\n",
-       "      <th>cityPopulation2010Census</th>\n",
-       "      <th>cityLat</th>\n",
-       "      <th>cityLong</th>\n",
-       "      <th>cityZip</th>\n",
+       "      <th>csaRank</th>\n",
+       "      <th>csaPrimaryCity</th>\n",
+       "      <th>csaFullName</th>\n",
+       "      <th>csaPrimaryCityState</th>\n",
+       "      <th>csaPopulation2018Estimate</th>\n",
+       "      <th>csaPopulation2010Census</th>\n",
+       "      <th>csaPrimaryCityLat</th>\n",
+       "      <th>csaPrimaryCityLong</th>\n",
+       "      <th>csaPrimaryCityZip</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -225,36 +225,36 @@
        "3       1/2/15             0           EST        Newark        NJ   40.7267   \n",
        "4       1/3/15             0           EST        Newark        NJ   40.7267   \n",
        "\n",
-       "   Longitude ParameterName  AQI  AQICategoryNumber AQICategory  cityRank  \\\n",
-       "0   -74.1442         OZONE   30                  1        Good         1   \n",
-       "1   -74.1442         PM2.5   65                  2    Moderate         1   \n",
-       "2   -74.1442         OZONE   24                  1        Good         1   \n",
-       "3   -74.1442         PM2.5   56                  2    Moderate         1   \n",
-       "4   -74.1442         OZONE    8                  1        Good         1   \n",
+       "   Longitude ParameterName  AQI  AQICategoryNumber AQICategory  csaRank  \\\n",
+       "0   -74.1442         OZONE   30                  1        Good        1   \n",
+       "1   -74.1442         PM2.5   65                  2    Moderate        1   \n",
+       "2   -74.1442         OZONE   24                  1        Good        1   \n",
+       "3   -74.1442         PM2.5   56                  2    Moderate        1   \n",
+       "4   -74.1442         OZONE    8                  1        Good        1   \n",
        "\n",
-       "        cityName                                            cityCSA cityState  \\\n",
-       "0  New York City  New York-Newark, NY-NJ-CT-PA Combined Statisti...        NY   \n",
-       "1  New York City  New York-Newark, NY-NJ-CT-PA Combined Statisti...        NY   \n",
-       "2  New York City  New York-Newark, NY-NJ-CT-PA Combined Statisti...        NY   \n",
-       "3  New York City  New York-Newark, NY-NJ-CT-PA Combined Statisti...        NY   \n",
-       "4  New York City  New York-Newark, NY-NJ-CT-PA Combined Statisti...        NY   \n",
+       "  csaPrimaryCity                                        csaFullName  \\\n",
+       "0  New York City  New York-Newark, NY-NJ-CT-PA Combined Statisti...   \n",
+       "1  New York City  New York-Newark, NY-NJ-CT-PA Combined Statisti...   \n",
+       "2  New York City  New York-Newark, NY-NJ-CT-PA Combined Statisti...   \n",
+       "3  New York City  New York-Newark, NY-NJ-CT-PA Combined Statisti...   \n",
+       "4  New York City  New York-Newark, NY-NJ-CT-PA Combined Statisti...   \n",
        "\n",
-       "   cityPopulation2018Estimate  cityPopulation2010Census  cityLat  cityLong  \\\n",
-       "0                    22679948                  22255491  40.7128   -74.006   \n",
-       "1                    22679948                  22255491  40.7128   -74.006   \n",
-       "2                    22679948                  22255491  40.7128   -74.006   \n",
-       "3                    22679948                  22255491  40.7128   -74.006   \n",
-       "4                    22679948                  22255491  40.7128   -74.006   \n",
+       "  csaPrimaryCityState  csaPopulation2018Estimate  csaPopulation2010Census  \\\n",
+       "0                  NY                   22679948                 22255491   \n",
+       "1                  NY                   22679948                 22255491   \n",
+       "2                  NY                   22679948                 22255491   \n",
+       "3                  NY                   22679948                 22255491   \n",
+       "4                  NY                   22679948                 22255491   \n",
        "\n",
-       "   cityZip  \n",
-       "0    10001  \n",
-       "1    10001  \n",
-       "2    10001  \n",
-       "3    10001  \n",
-       "4    10001  "
+       "   csaPrimaryCityLat  csaPrimaryCityLong  csaPrimaryCityZip  \n",
+       "0            40.7128             -74.006              10001  \n",
+       "1            40.7128             -74.006              10001  \n",
+       "2            40.7128             -74.006              10001  \n",
+       "3            40.7128             -74.006              10001  \n",
+       "4            40.7128             -74.006              10001  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,13 +262,14 @@
    "source": [
     "# Read our csv into a dataframe using pandas\n",
     "\n",
-    "df = pd.read_csv('./Shane/output_data/AirNowAPI_20200411_073607.csv')\n",
+    "#df = pd.read_csv('./Shane/output_data/AirNowAPI_20200411_073607.csv')\n",
+    "df = pd.read_csv('./output_data/AirNowAPI_20200411_0736_v2.csv')\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -328,15 +329,15 @@
        "      <th>AQI</th>\n",
        "      <th>AQICategoryNumber</th>\n",
        "      <th>AQICategory</th>\n",
-       "      <th>cityRank</th>\n",
-       "      <th>cityName</th>\n",
-       "      <th>cityCSA</th>\n",
-       "      <th>cityState</th>\n",
-       "      <th>cityPopulation2018Estimate</th>\n",
-       "      <th>cityPopulation2010Census</th>\n",
-       "      <th>cityLat</th>\n",
-       "      <th>cityLong</th>\n",
-       "      <th>cityZip</th>\n",
+       "      <th>csaRank</th>\n",
+       "      <th>csaPrimaryCity</th>\n",
+       "      <th>csaFullName</th>\n",
+       "      <th>csaPrimaryCityState</th>\n",
+       "      <th>csaPopulation2018Estimate</th>\n",
+       "      <th>csaPopulation2010Census</th>\n",
+       "      <th>csaPrimaryCityLat</th>\n",
+       "      <th>csaPrimaryCityLong</th>\n",
+       "      <th>csaPrimaryCityZip</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -467,36 +468,36 @@
        "3       1/2/15             0           EST        Newark        NJ   40.7267   \n",
        "4       1/3/15             0           EST        Newark        NJ   40.7267   \n",
        "\n",
-       "   Longitude ParameterName  AQI  AQICategoryNumber AQICategory  cityRank  \\\n",
-       "0   -74.1442         OZONE   30                  1        Good         1   \n",
-       "1   -74.1442         PM2.5   65                  2    Moderate         1   \n",
-       "2   -74.1442         OZONE   24                  1        Good         1   \n",
-       "3   -74.1442         PM2.5   56                  2    Moderate         1   \n",
-       "4   -74.1442         OZONE    8                  1        Good         1   \n",
+       "   Longitude ParameterName  AQI  AQICategoryNumber AQICategory  csaRank  \\\n",
+       "0   -74.1442         OZONE   30                  1        Good        1   \n",
+       "1   -74.1442         PM2.5   65                  2    Moderate        1   \n",
+       "2   -74.1442         OZONE   24                  1        Good        1   \n",
+       "3   -74.1442         PM2.5   56                  2    Moderate        1   \n",
+       "4   -74.1442         OZONE    8                  1        Good        1   \n",
        "\n",
-       "        cityName                                            cityCSA cityState  \\\n",
-       "0  New York City  New York-Newark, NY-NJ-CT-PA Combined Statisti...        NY   \n",
-       "1  New York City  New York-Newark, NY-NJ-CT-PA Combined Statisti...        NY   \n",
-       "2  New York City  New York-Newark, NY-NJ-CT-PA Combined Statisti...        NY   \n",
-       "3  New York City  New York-Newark, NY-NJ-CT-PA Combined Statisti...        NY   \n",
-       "4  New York City  New York-Newark, NY-NJ-CT-PA Combined Statisti...        NY   \n",
+       "  csaPrimaryCity                                        csaFullName  \\\n",
+       "0  New York City  New York-Newark, NY-NJ-CT-PA Combined Statisti...   \n",
+       "1  New York City  New York-Newark, NY-NJ-CT-PA Combined Statisti...   \n",
+       "2  New York City  New York-Newark, NY-NJ-CT-PA Combined Statisti...   \n",
+       "3  New York City  New York-Newark, NY-NJ-CT-PA Combined Statisti...   \n",
+       "4  New York City  New York-Newark, NY-NJ-CT-PA Combined Statisti...   \n",
        "\n",
-       "   cityPopulation2018Estimate  cityPopulation2010Census  cityLat  cityLong  \\\n",
-       "0                    22679948                  22255491  40.7128   -74.006   \n",
-       "1                    22679948                  22255491  40.7128   -74.006   \n",
-       "2                    22679948                  22255491  40.7128   -74.006   \n",
-       "3                    22679948                  22255491  40.7128   -74.006   \n",
-       "4                    22679948                  22255491  40.7128   -74.006   \n",
+       "  csaPrimaryCityState  csaPopulation2018Estimate  csaPopulation2010Census  \\\n",
+       "0                  NY                   22679948                 22255491   \n",
+       "1                  NY                   22679948                 22255491   \n",
+       "2                  NY                   22679948                 22255491   \n",
+       "3                  NY                   22679948                 22255491   \n",
+       "4                  NY                   22679948                 22255491   \n",
        "\n",
-       "   cityZip  \n",
-       "0    10001  \n",
-       "1    10001  \n",
-       "2    10001  \n",
-       "3    10001  \n",
-       "4    10001  "
+       "   csaPrimaryCityLat  csaPrimaryCityLong  csaPrimaryCityZip  \n",
+       "0            40.7128             -74.006              10001  \n",
+       "1            40.7128             -74.006              10001  \n",
+       "2            40.7128             -74.006              10001  \n",
+       "3            40.7128             -74.006              10001  \n",
+       "4            40.7128             -74.006              10001  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
